# bonsaiflutter

./: .gitignore  PROJECT_STATUS.md  SETUP.md  flutter_rust_bridge.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/flutter_build/5562be09c0dc69a68c0c5efe14956275/: .filecache  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
android/app/: build.gradle.kts
coverage/: lcov.info
docs/: BUILD.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/providers/: btc_price_provider.dart  node_provider.dart  security_provider.dart  wallet_provider.dart
lib/core/theme/: app_theme.dart
lib/domain/models/: help_model.dart  transaction_model.dart
lib/domain/repositories/: wallet_repository.dart
lib/presentation/screens/: dashboard_screen.dart  help_screen.dart  lock_screen.dart  main_screen.dart  network_screen.dart  receive_screen.dart  recovery_phrase_view_screen.dart  send_screen.dart  settings_screen.dart  transaction_detail_screen.dart  transaction_history_screen.dart  wallet_setup_screen.dart
lib/presentation/widgets/: balance_history_chart.dart  copyable_address.dart  fee_selector.dart  info_row.dart  qr_scanner_modal.dart  (+1 more)
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/common/: mod.rs
rust/src/node/: control.rs  message.rs  mod.rs  stats_fetcher.rs
rust/src/wallet/: manager.rs
scripts/: build_rust.sh  rebuild_all.sh
test/: widget_test.dart
(+12 files in other folders)
