[package]
name = "bonsai_wallet"
version = "0.1.0"
edition = "2024"
authors = ["Luis Schwab <luisschwab@protonmail.com>"]
description = "Bonsai [盆栽] is a desktop Bitcoin wallet powered by bdk_floresta. Coming soon™."
repository = "https://github.com/luisschwab/bonsai"
readme = "README.md"
license = "MIT"
keywords = ["bitcoin", "wallet", "bdk", "utreexo", "floresta"]


[lib]
name = "bonsai_mobile_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
bdk_floresta = { git = "https://github.com/luisschwab/bdk-floresta" }
bdk_wallet = "2.3.0"
maxminddb = { version = "0.27", features = ["mmap"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
chrono = "0.4.42"
regex = "1.12.2"
memmap2 = "0.9.9"
hex = "0.4.3"
bitcoin = "0.32.8"
once_cell = "1.21.3"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
futures = "0.3"
# open = "5.3.3" # Removed as it's likely desktop/UI specific

